@@ -20,9 +20,7 @@ import io.apiman.manager.api.beans.summary.ApiNamespaceBean;
 import io.apiman.manager.api.beans.summary.AvailableApiBean;
 import io.apiman.manager.api.core.IApiCatalog;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -39,7 +37,7 @@ public class JsonApiCatalog implements IApiCatalog {
 
     private static final ObjectMapper mapper = new ObjectMapper();
 
-    private URL catalogUrl;
+    private URI catalogUri;
     private List<AvailableApiBean> apis;
 
     /**
@@ -49,9 +47,13 @@ public class JsonApiCatalog implements IApiCatalog {
     public JsonApiCatalog(Map<String, String> config) {
         String cu = config.get("catalog-url"); //$NON-NLS-1$
         try {
-            catalogUrl = new URL(cu);
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
+            cu = cu.trim();
+            if (cu.startsWith("file:")) { //$NON-NLS-1$
+                cu = cu.replace('\\', '/');
+            }
+            catalogUri = new URI(cu);
+        } catch (Exception e) {
+            throw new RuntimeException("Error configuring the JSON API catalog from a URI: " + cu, e); //$NON-NLS-1$
         }
     }
     
@@ -61,7 +63,7 @@ public class JsonApiCatalog implements IApiCatalog {
     @Override
     public List<AvailableApiBean> search(String keyword, String namespace) {
         if (apis == null) {
-            apis = loadAPIs(catalogUrl);
+            apis = loadAPIs(catalogUri);
         }
         ArrayList<AvailableApiBean> rval = new ArrayList<>();
 
@@ -83,15 +85,15 @@ public class JsonApiCatalog implements IApiCatalog {
     }
 
     /**
-     * @param catalogUrl the URL to load the catalog from
+     * @param uri the URL to load the catalog from
      * @return Loads APIs from the catalog URL
      */
-    private static List<AvailableApiBean> loadAPIs(URL catalogUrl) {
+    private static List<AvailableApiBean> loadAPIs(URI uri) {
         try {
-            ApiCatalogBean catalog = (ApiCatalogBean) mapper.reader(ApiCatalogBean.class).readValue(catalogUrl);
+            ApiCatalogBean catalog = (ApiCatalogBean) mapper.reader(ApiCatalogBean.class).readValue(uri.toURL());
             return catalog.getApis();
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+        } catch (Exception e) {
+            throw new RuntimeException("Error loading APIs from a URL: " + uri, e); //$NON-NLS-1$
         }
     }
 
